deploys/order-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-svc
  namespace: pg-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
    spec:
      containers:
        - image: yildirim7mustafa/deneme
          name: order-svc
          ports:
            - containerPort: 8080
