deploys/order-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc-service
  namespace: pg-spring
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: order-svc
  type: NodePort
