deploys/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-svc-ingress
  namespace: pg-spring
spec:
  rules:
    - host: sanalmarket.com
      http:
        paths:
          - path: "/api/v1/customers"
            pathType: Prefix
            backend:
              service:
                name: order-svc-service
                port:
                  number: 8080
